--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -196,13 +196,18 @@ s.sort_accordion {
   font-size: 18px;
   line-height: 22px;
   color: #444444;
+  display: flex;
   /* identical to box height */
   .labelMargin {
-    margin-bottom: 32px; /* Додати відстань внизу */
+    margin-top: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #a2a2a2;
   }
 
   .valueMargin {
-    margin-top: 0px; /* Додати відстань зверху */
+    margin-top: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #a2a2a2;
   }
   .title {
     font-family: "Montserrat";
@@ -217,7 +222,6 @@ s.sort_accordion {
     .line {
       margin: 10px;
       width: 510px;
-      border: 1px solid #a2a2a2;
     }
   }
   .features__section_right {
@@ -254,11 +258,73 @@ s.sort_accordion {
   display: flex;
   justify-content: center;
   &_card {
+    padding: 35px 25px;
     width: 701px;
     height: 501px;
-    background: #ffffff;
+    background: $primary-bg-color;
     margin-right: 50px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    &_title {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 29px;
+      color: #0f0f0f;
+    }
+    &_name {
+      margin-top: 30px;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 27px;
+      color: $primary-color;
+    }
+    &_date {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 14px;
+      /* identical to box height, or 100% */
+
+      display: flex;
+      align-items: center;
+
+      color: #b2b2b2;
+    }
+    &_text {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+
+      color: rgba(15, 15, 15, 0.6);
+    }
+    &_btn {
+      margin-top: 41px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 39px;
+      width: 181px;
+      border: 1px solid #c90000;
+      padding: 10px 45px;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 18px;
+      background-color: $primary-bg-color;
+      color: #c90000;
+      transition: 0.4s;
+      &:hover {
+        color: $primary-bg-color;
+        background-color: $primary-color;
+      }
+    }
   }
   &_form {
     width: 489px;
