--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -2,21 +2,26 @@
 
 .products_container {
   position: relative;
+
+  .total__items {
+    color: $primary-color;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 18px;
+  }
 }
 
-// .top_title_container {
-//     width: 100%;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
 
-// }
 .cart_container {
-  position: absolute;
-  right: -2%;
-  bottom: 2%;
+  position: sticky;
+  right: 0;
+  bottom: 20px;
+  width: 100%;
+  margin-left: 100%;
 
-  @media screen and (max-width: 614px) {
+  @media screen and (max-width: 840px) {
     display: none;
   }
 }
@@ -161,6 +166,7 @@ s.sort_accordion {
       }
     }
   }
+
 
   .tabs__block {
     width: 600px;
