--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -218,7 +218,7 @@
       line-height: 18px;
       color: $primary-bg-color;
       transition: 0.5s;
-
+      border: none;
       &:hover {
         transform: translateY(-5px);
       }
