--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -213,11 +213,15 @@ s.sort_accordion {
   color: #444444;
   /* identical to box height */
   .labelMargin {
-    margin-bottom: 32px; /* Додати відстань внизу */
+    border-bottom: 1px solid #a2a2a2;
+    margin-bottom: 16px;
+    padding-bottom: 16px;
   }
 
   .valueMargin {
-    margin-top: 0px; /* Додати відстань зверху */
+    border-bottom: 1px solid #a2a2a2;
+    margin-bottom: 16px;
+    padding-bottom: 16px;
   }
 
   .title {
