style_tabs_block

--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -165,7 +165,7 @@ s.sort_accordion {
     width: 600px;
     height: 100px;
     justify-content: center;
-    margin-left: 51px;
+    // margin-left: 51px;
     margin-top: 14px;
     display: flex;
     gap: 10px;
