--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -162,19 +162,23 @@ s.sort_accordion {
   }
 
   .tabs__block {
-    width: 600px;
-    height: 100px;
+    // width: 600px;
+    text-align: center;
+    height: 60px;
     justify-content: center;
     // margin-left: 51px;
+    justify-content: center;
     margin-top: 14px;
     display: flex;
     gap: 10px;
 
     &_title {
+      display: flex;
+      justify-content: center;
       cursor: pointer;
       margin-right: 10px;
       margin-bottom: 10px;
-      padding: 10px;
+      padding: 16px 39px;
       gap: 10px;
       flex-wrap: wrap;
       height: 51px;
@@ -185,7 +189,7 @@ s.sort_accordion {
       font-weight: 500;
       font-size: 20px;
       line-height: 18px;
-
+      text-align: center;
       align-items: center;
       color: #0f0f0f;
     }
@@ -193,6 +197,18 @@ s.sort_accordion {
     .selected {
       border-bottom: 1px solid #c90000;
       color: $primary-color;
+    }
+  }
+  .swiper__img {
+    margin-top: 12px;
+    .swiper__img_block {
+      margin-right: 12px;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      padding: 28px 8px;
+      width: 110px;
+      height: 110px;
+      background-color: $primary-bg-color;
     }
   }
 }
