--- a/src/components/filter/index.module.scss
+++ b/src/components/filter/index.module.scss
@@ -5,14 +5,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
     line-height: 18px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    padding: 15px 21px;
+    padding: 15px 18px;
+}
+.form {
+    margin-top: 18px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); 
 }
 
 .filter_title {
@@ -26,6 +29,7 @@
 .filter_btn {
     border: none;
     background: none;
+    margin-right: 2px;
     &:hover {
         scale: 1.05;
     }
