--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -36,15 +36,16 @@
   }
 }
 
-
 .cart_container {
+  width: 99%;
   position: sticky;
-  right: 0;
+  display: flex;
+  justify-content: end;
   bottom: 20px;
-  // width: 100%;
-  margin-left: 96%;
-
-  @media screen and (max-width: 840px) {
+  margin-right:-100vw;
+  z-index:2;
+  
+  @media screen and (max-width: 850px) {
     display: none;
   }
 }
