--- a/src/components/priceRangeFilter/index.module.scss
+++ b/src/components/priceRangeFilter/index.module.scss
@@ -2,12 +2,14 @@
 
 .price_slider_container {
     width: 100%;
+    margin-bottom: 20px;
 
 }
 
 .handle {
     position: absolute;
-    margin-left: -15px;
+    margin-left: -17px;
+    margin-right: -20px;
     margin-top: 11px;
     z-index: 2;
     width: 18px;
@@ -25,7 +27,6 @@
 }
 
 .track {
-
     position: absolute;
     height: 2px;
     z-index: 1;
@@ -37,7 +38,7 @@
 
 .tickLine {
     display: none;
-    ;
+    
 }
 
 .tickLabel {
@@ -54,6 +55,7 @@
     width: 100%;
     @include flex-center;
     border: 1px solid $primary-color;
+
     &:focus {
         outline: none;
     }
