--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -1,17 +1,6 @@
 @import "/src/styles/variables.scss";
 
-.top_items_container{
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-  @media screen and (max-width: 990px){
-    position: inherit;
-    transform: translateX(0);
 
-  }
-}
 .main_title {
   margin: 8px 0 0 0;
 }
@@ -24,16 +13,28 @@
   font-size: 18px;
   line-height: 18px;
 }
+
 .sort_accordion {
   margin-bottom: 18px;
 }
 
+.filter_btn_container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  padding: 15px 18px;
+}
+
 .products_container {
   position: relative;
-  margin-top: 70px;
-  @media screen and (max-width: 990px){
-    margin-top: 18px;
-  }
+  margin-top: 18px;
 }
 
 .cart_container {
@@ -42,9 +43,9 @@
   display: flex;
   justify-content: end;
   bottom: 20px;
-  margin-right:-100vw;
-  z-index:2;
-  
+  margin-right: -100vw;
+  z-index: 2;
+
   @media screen and (max-width: 850px) {
     display: none;
   }
@@ -58,6 +59,7 @@
 s.sort_accordion {
   padding: 17px 21px;
 }
+
 // id.tsx //
 .product__card_container {
   .product__card_block {
@@ -229,8 +231,10 @@ s.sort_accordion {
       color: $primary-color;
     }
   }
+
   .swiper__img {
     margin-top: 12px;
+
     .swiper__img_block {
       margin-right: 12px;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -257,6 +261,7 @@ s.sort_accordion {
   font-size: 18px;
   line-height: 22px;
   color: #444444;
+
   /* identical to box height */
   .labelMargin {
     border-bottom: 1px solid #a2a2a2;
@@ -329,6 +334,7 @@ s.sort_accordion {
     background: $primary-bg-color;
     margin-right: 50px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
     &_title {
       font-family: "Montserrat";
       font-style: normal;
@@ -337,6 +343,7 @@ s.sort_accordion {
       line-height: 29px;
       color: #0f0f0f;
     }
+
     &_name {
       margin-top: 30px;
       font-family: "Montserrat";
@@ -346,6 +353,7 @@ s.sort_accordion {
       line-height: 27px;
       color: $primary-color;
     }
+
     &_date {
       font-family: "Montserrat";
       font-style: normal;
@@ -359,6 +367,7 @@ s.sort_accordion {
 
       color: #b2b2b2;
     }
+
     &_text {
       font-family: "Montserrat";
       font-style: normal;
@@ -368,6 +377,7 @@ s.sort_accordion {
 
       color: rgba(15, 15, 15, 0.6);
     }
+
     &_btn {
       margin-top: 41px;
       display: flex;
@@ -385,6 +395,7 @@ s.sort_accordion {
       background-color: $primary-bg-color;
       color: #c90000;
       transition: 0.4s;
+
       &:hover {
         color: $primary-bg-color;
         background-color: $primary-color;
