--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -55,3 +55,14 @@ a {
   color: black;
 }
 
+.order-xs-1 {
+  @media (max-width: 575.98px) { // Bootstrap 4 xs max-width
+    order: 1!important;
+  }
+}
+
+.order-xs-2 {
+  @media (max-width: 575.98px) { // Bootstrap 4 xs max-width
+    order: 2!important;
+  }
+}
