--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -1,18 +1,20 @@
+@import "@/styles/variables.scss";
+
 .card_wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex-column-center;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   height: 450px;
   font-family: "Montserrat";
   font-style: normal;
   transition: ease-out 0.8s;
-  @media screen and (min-width: 992px) and (max-width: 1199px){
+
+  @media screen and (min-width: 992px) and (max-width: 1199px) {
     height: 500px;
   }
+
   a {
     text-decoration: none;
-  
+
   }
 
   &:hover {
@@ -27,7 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
 
-    
+
 
     .new_fav_container {
       width: 100%;
@@ -35,14 +37,13 @@
       justify-content: space-between;
       margin-top: 10px;
 
-
       .new_label {
         width: 73.12px;
         height: 30px;
         display: grid;
         place-items: center;
-        color: white;
-        background: #c90000;
+        color: $primary-bg-color;
+        background: $primary-color;
       }
     }
 
@@ -67,7 +68,7 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 14px;
-      margin:20px 0;
+      margin: 20px 0;
     }
 
     .card__producer {
@@ -77,7 +78,7 @@
       font-size: 14px;
       line-height: 14px;
       text-transform: uppercase;
-      color: #c90000;
+      color: $primary-color;
     }
 
     .price_cart_container {
@@ -85,12 +86,13 @@
       justify-content: space-between;
       display: flex;
       align-items: center;
+
       @media screen and (min-width: 992px) and (max-width: 1199px) {
         flex-direction: column;
         align-items: center;
       }
-        
-      
+
+
 
       .card__price {
         font-weight: 700;
@@ -103,7 +105,7 @@
         font-weight: 500;
         font-size: 14px;
         line-height: 14px;
-        color: #c90000;
+        color: $primary-color;
       }
     }
   }
