--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -62,17 +62,15 @@ s.sort_accordion {
 
 // id.tsx //
 .product__card_container {
+  @include flex-column-center;
   max-width: 90%;
   min-width: 318px;
   row-gap: 30px;
-
-  @include flex-column-center;
-
+  
   .product__card_block {
     width: 100%;
-    // height:900px;
     justify-content: space-between;
-
+   
     .img_swiper_col {
       display: flex;
       flex-direction: column;
@@ -289,6 +287,10 @@ s.sort_accordion {
       max-width: 100%;
       justify-content: space-between;
     }
+
+    .selectedImage {
+      border: 1px solid #c8102e;
+    }
   }
 
   //Tabs
@@ -339,8 +341,6 @@ s.sort_accordion {
 
     &_similar {
       width: 100%;
-
-
     }
 
     .selected {
