--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,10 +1,12 @@
 @import "../styles/variables.scss";
+
 .swiper__contsiner {
   display: flex;
   justify-content: center;
   width: 100%;
   margin: 0 auto;
 }
+
 .search__block {
   position: absolute;
   left: 0;
@@ -65,6 +67,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   a {
     text-decoration: none;
   }
@@ -78,17 +81,22 @@
   line-height: 39px;
   color: $secondary-bg-color;
 }
+
 .producer {
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   .producer_line {
-    max-width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin-top: 90px;
     display: flex;
     align-items: center;
-    gap: 200px;
-    flex-grow: 1;
-    height: 118px;
+    gap: 20px;
     background-color: $primary-color;
+    padding: 20px 0;
   }
 }
 
@@ -153,6 +161,7 @@
   margin-top: 90px;
   margin: 0 auto;
   margin-bottom: 90px;
+
   .retreat {
     display: flex;
     flex-direction: column;
@@ -219,6 +228,7 @@
       color: $primary-bg-color;
       transition: 0.5s;
       border: none;
+
       &:hover {
         transform: translateY(-5px);
       }
@@ -235,6 +245,7 @@
     line-height: 39px;
     color: $secondary-bg-color;
   }
+
   &__card {
     width: 295px;
     height: 300px;
@@ -251,6 +262,7 @@
       line-height: 14px;
       margin-bottom: 20px;
     }
+
     &_name {
       font-family: "Montserrat";
       font-style: normal;
@@ -259,6 +271,7 @@
       line-height: 27px;
       color: $primary-color;
     }
+
     &_text {
       margin-top: 20px;
       font-family: "Montserrat";
@@ -268,6 +281,7 @@
       line-height: 17px;
       color: rgba(15, 15, 15, 0.6);
     }
+
     &_btn {
       width: 245px;
       height: 40px;
@@ -279,6 +293,7 @@
       line-height: 18px;
       background-color: $primary-bg-color;
       transition: 0.4s;
+
       &:hover {
         background-color: $primary-color;
         color: #ffffff;
@@ -286,6 +301,7 @@
     }
   }
 }
+
 .pagination {
   display: flex;
   justify-content: center;
