--- a/src/pages/about/index.module.scss
+++ b/src/pages/about/index.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   .h1 {
     display: flex;
     justify-content: center;
@@ -16,16 +17,18 @@
     color: $primary-color;
     margin-bottom: 25px;
   }
+
   .p {
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 500;
     font-size: 22px;
     line-height: 27px;
-    text-align: center;
+    text-align: justify;
     color: $secondary-text-color;
-    margin-bottom: 60px;
+    margin: 0 5% 60px 5% ;
   }
+
   .span {
     display: flex;
     justify-content: center;
@@ -38,16 +41,22 @@
     text-align: center;
     margin-bottom: 40px;
   }
+
   .left_right_blocks {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
+    margin: 0 5%;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
+      
+    
+
     .block {
-      padding: 78px 50px 77px 50px;
+      padding:10%;
       border-bottom: 1px solid $primary-color;
-      width: 610px;
-      height: 484px;
+      text-align: justify;
       font-family: "Montserrat";
       font-style: normal;
       font-weight: 500;
@@ -57,6 +66,7 @@
       margin-bottom: 70px;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
       transition: 0.5s;
+
       &:hover {
         transform: translateY(-10px);
       }
