--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -11,7 +11,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  width: 1105.5px;
+  width: 80%; /* Змінено на відсотки */
   height: 238.5px;
   transform: translate(0, -100px);
   z-index: 2;
@@ -33,7 +33,7 @@
 
   .search {
     margin-left: 140px;
-    width: 825.5px;
+    width: 70%; /* Змінено на відсотки */
     height: 68.5px;
     background: $primary-bg-color;
     border: 3px solid $primary-color;
@@ -297,6 +297,50 @@
       &:hover {
         background-color: $primary-color;
         color: #ffffff;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 750px) {
+  .search__block {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 80%; /* Змінено на відсотки */
+    height: 200px;
+    transform: translate(0, -100px);
+    z-index: 2;
+    background: $primary-bg-color;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    margin-bottom: 100px;
+    margin: 0 auto;
+
+    .p {
+      padding-top: 45px;
+      color: $primary-color;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px !important;
+      line-height: 29px;
+      margin-left: 50px;
+    }
+
+    .search {
+      margin-left: 50px;
+      width: 80%; /* Змінено на відсотки */
+      height: 60px;
+      background: $primary-bg-color;
+      border: 3px solid $primary-color;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 19px 35px;
+      gap: 10px;
+
+      &:focus {
+        color: $primary-color;
       }
     }
   }
