--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -178,11 +178,19 @@
   margin: 0 auto;
   margin-bottom: 90px;
 
+  .faq {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 20%;
+    }
+
+  }
+
   .retreat {
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
+
   }
 
   .p {
@@ -232,7 +240,7 @@
       justify-content: center;
       align-items: center;
       padding: 16px 54px;
-      width:60%;
+      width: 60%;
       height: 51px;
       background-color: $primary-color;
       font-family: "Montserrat";
