--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -38,12 +38,12 @@
 }
 
 .cart_container {
-  width: 99%;
+  width: fit-content;
   position: sticky;
   display: flex;
   justify-content: end;
   bottom: 20px;
-  margin-right: -100vw;
+  margin-left: 90vw;
   z-index: 2;
 
   @media screen and (max-width: 850px) {
