--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -25,10 +25,6 @@
   margin-bottom: 100px;
   margin: 0 auto;
 
-  @media screen and (max-width: 1000px) {
-    display: none;
-  }
-
   .p {
     padding-top: 45px;
     color: $primary-color;
@@ -49,7 +45,7 @@
     justify-content: center;
     align-items: center;
     padding: 19px 35px;
-    // gap: 10px;
+    margin: 0 auto;
 
     &:focus {
       color: $primary-color;
