--- a/src/components/dropdownsearch/index.module.scss
+++ b/src/components/dropdownsearch/index.module.scss
@@ -22,6 +22,8 @@
     list-style-type: none;
     max-height: 600px;
     overflow-y: auto;
+    padding: 0;
+    margin-top: 20px;
 
     .product_li {
         display: flex;
