--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -3,18 +3,16 @@
 .container__header {
   display: flex;
   justify-content: center;
-
   .header {
     position: fixed;
     top: 0;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 82px;
     width: 100%;
     background-color: $primary-bg-color;
     z-index: 9999;
-
     .action__bar {
       display: flex;
       align-items: center;
@@ -54,17 +52,18 @@
 
     @media (max-width: 1000px) {
       .menu__toggle {
+        cursor: pointer;
         display: flex;
         flex-direction: column;
         justify-content: center;
         border: none;
         align-items: center;
         gap: 7px;
-        background-color: #ffffff;
+        height: 100%;
       }
 
       .menu__icon {
-        transition: 1s;
+        transition: 0.7s;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -74,7 +73,7 @@
       }
 
       .activeMenuIcon:nth-child(1) {
-        transform: translateY(10px) rotate(45deg);
+        transform: translateY(10px) rotate(400deg);
       }
 
       .activeMenuIcon:nth-child(2) {
@@ -83,7 +82,7 @@
       }
 
       .activeMenuIcon:nth-child(3) {
-        transform: translateY(-10px) rotate(-45deg);
+        transform: translateY(-10px) rotate(-400deg);
       }
 
       .phone__btn {
