--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -64,7 +64,7 @@ s.sort_accordion {
 .product__card_container {
   @include flex-column-center;
   max-width: 90%;
-  min-width: 318px;
+  min-width: 300px;
   row-gap: 30px;
 
   .product__card_block {
@@ -428,7 +428,7 @@ s.sort_accordion {
 .description__section {
   width: 100%;
   @include flex-center;
-  padding: 35px 60px;
+  padding: 35px 40px;
   background: $primary-bg-color;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   border-radius: 0px;
@@ -444,6 +444,7 @@ s.sort_accordion {
   }
 
   &_text {
+    text-align: justify;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 400;
@@ -513,7 +514,7 @@ s.sort_accordion {
       display: flex;
       justify-content: center;
       align-items: center;
-      border: 1px solid #c90000;
+      border: 1px solid $primary-color;
       padding: 10px 45px;
       font-family: "Montserrat";
       font-style: normal;
@@ -521,7 +522,7 @@ s.sort_accordion {
       font-size: 16px;
       line-height: 18px;
       background-color: $primary-bg-color;
-      color: #c90000;
+      color: $primary-color;
       transition: 0.4s;
 
       &:hover {
@@ -536,7 +537,7 @@ s.sort_accordion {
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    background: #ffffff;
+    background: $primary-bg-color;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -554,7 +555,7 @@ s.sort_accordion {
     &_input {
       margin-bottom: 30px;
       border: none;
-      border-bottom: 1px solid #c90000;
+      border-bottom: 1px solid $primary-color;
       font-family: "Montserrat";
       font-style: normal;
       font-weight: 400;
@@ -572,7 +573,7 @@ s.sort_accordion {
       align-items: center;
       padding: 16px 82px;
       gap: 10px;
-      background: #c90000;
+      background: $primary-color;
       color: $primary-bg-color;
     }
   }
