--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -1,15 +1,17 @@
 @import "../../styles/variables.scss";
 
 .container__header {
+  width: 100%;
   display: flex;
   justify-content: center;
 
   .header {
+    padding: 0 9%;
     position: fixed;
     top: 0;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 82px;
     width: 100%;
     background-color: $primary-bg-color;
@@ -28,7 +30,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 226px;
+        padding: 0 20px;
         height: 47px;
         background-color: $primary-color;
         border: none;
