--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -7,7 +7,8 @@
   align-items: center;
 
   .header {
-    width: 92%;
+    width: 100%;
+    padding: 0 7%;
     position: fixed;
     top: 0;
     display: flex;
